fixed spacing of link in banner

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -54,7 +54,6 @@
   color: floralwhite;
   text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.4);
   position: absolute;
-  top: 50%;
   left: 50%;
   margin-top: -110px;
   margin-left: -110px;
